@@ -10,12 +10,12 @@
 -XX:+UseG1GC
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
--XX:+CMSClassUnloadingEnabled
--XX:+AggressiveOpts
 -XX:+HeapDumpOnOutOfMemoryError
--XX:OnOutOfMemoryError=kill -9 %p
+-XX:+ExitOnOutOfMemoryError
 -XX:ReservedCodeCacheSize=150M
+# jdk.nio.maxCachedBufferSize controls what buffers can be allocated in per-thread "temporary buffer cache" (sun.nio.ch.Util). Value of 0 disables the cache.
+-Djdk.nio.maxCachedBufferSize=0
 -DHADOOP_USER_NAME=hive
--Duser.timezone=UTC
--Xdebug 
--Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+-Duser.timezone=Asia/Kathmandu
+#-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
+-XX:ErrorFile=/docker/volumes/logs/product-tests-presto-jvm-error-file.log
